# peek

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
data/: docker.json  git.json  javascript.json  linux.json  react.json  sql.json
scripts/: import.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: mod.rs  openrouter.rs  types.rs
src-tauri/src/commands/: ai.rs  database.rs  mod.rs  search.rs
src-tauri/src/db/: mod.rs  schema.rs
src/components/AnswerCard/: AnswerCard.tsx
src/components/Overlay/: Overlay.tsx
src/components/SearchBox/: SearchBox.tsx
src/components/Settings/: Settings.tsx
src/hooks/: useSearch.ts  useTauri.ts
src/services/: ai.ts  search.ts
